// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createLoader should override name with a function 1`] = `
Object {
  "loader": "name-override",
  "options": Object {},
}
`;

exports[`createLoader should override name with a string 1`] = `
Object {
  "loader": "override",
  "options": Object {},
}
`;

exports[`createLoader should return correct loader name 1`] = `"strange-name-2"`;

exports[`createLoader should return correct options 1`] = `
Object {
  "loader": "name",
  "options": Object {
    "a": Object {
      "option": true,
    },
    "b": "option",
  },
}
`;
